<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_to_alc_4_0">Welcome To ALC 4.0</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="about_url">https://andela.com/alc/</string>
    <string name="title_activity_activity">ALC 4 Phase 1</string>
    <string name="title_activity_b">About ALC</string>
    <string name="title_activity_c">My Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="hazem_dahab">Hazem Dahab</string>
    <string name="slack_username_zo0oka">Slack Username: @zo0oka</string>
    <string name="phone_number_201002706100">Phone Number: +201002706100</string>
    <string name="email_enghazemdahab82_gmail_com">Email: enghazemdahab82@gmail.com</string>
    <string name="country_egypt">Country: Egypt</string>
    <string name="track_android">Track: Android</string>
</resources>
