<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActivityC"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/dp16"
    tools:showIn="@layout/activity_c">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/profile_image"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/image"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/profile_picture" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_name"
        android:text="@string/hazem_dahab"
        android:textSize="35sp"
        android:layout_margin="8dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/track_text_view"
        android:text="@string/track_android"
        android:layout_gravity="start"
        android:layout_margin="8dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/country_text_view"
        android:text="@string/country_egypt"
        android:layout_margin="8dp"
        android:layout_gravity="start"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_text_view"
        android:text="@string/email_enghazemdahab82_gmail_com"
        android:layout_margin="8dp"
        android:layout_gravity="start"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone_text_view"
        android:text="@string/phone_number_201002706100"
        android:layout_margin="8dp"
        android:layout_gravity="start"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/slack_text_view"
        android:text="@string/slack_username_zo0oka"
        android:layout_margin="8dp"
        android:layout_gravity="start"
        android:textSize="18sp"/>
</LinearLayout>