<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActivityA"
    android:padding="@dimen/dp16"
    tools:showIn="@layout/activity_a">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/welcome_to_alc_4_0"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:padding="@dimen/dp16"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_alc_button"
        android:text="@string/about_alc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text_view"
        android:textColor="@android:color/black"
        android:layout_marginTop="60dp"
        android:textSize="30sp"
        android:padding="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/my_profile_button"
        android:text="@string/my_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_alc_button"
        android:textColor="@android:color/black"
        android:layout_marginTop="24dp"
        android:textSize="30sp"
        android:padding="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>